--- a/JH/jvmobilemenu/jv-jquery-mobile-menu.css
+++ b/JH/jvmobilemenu/jv-jquery-mobile-menu.css
@@ -5,7 +5,7 @@ html,body{width:100%;margin:0;padding:0}
 .mobile-nav ul li{list-style:none}
 ul.submenu{ padding-top:10px;}
 
-.hamburger{ position: absolute; display: none; top:20px; right: 10px;  padding:10px 10px 9px; cursor:pointer; z-index:200;}
+.hamburger{ position: fixed; display: none; top:20px; right: 10px;  padding:10px 10px 9px; cursor:pointer; z-index:200;}
 .hamburger .hamburger-inner{position:relative;height:21px;width:24px;display:block;margin:0;padding:0;}
 .hamburger .bar{width:24px;height:2px;background:#4d4d4d;position:absolute;top:0}
 .hamburger .bar.bar2,.hamburger .bar.bar3{top:9px; }
